--- a/src/asset/styles/import/common.scss
+++ b/src/asset/styles/import/common.scss
@@ -342,81 +342,59 @@
   }
 
   .label {
+    padding: 2px 5px;
+    border-radius: 25px;
+    background-color: #999;
+
     &_new {
-      padding: 2px 5px;
-      border-radius: 25px;
       background-color: #ff71f3;
     }  
 
     &_maintenance {
-      padding: 2px 5px;
-      border-radius: 25px;
       background-color: #00ff2f;
     }  
 
-    &_sky {
-      padding: 2px 5px;
-      border-radius: 24px;
+    &_blog {
       background-color: #a5effc;
     }
 
-    &_lime {
-      padding: 2px 5px;
-      border-radius: 24px;
+    &_naver {
       background-color: #cdff8b;
     }
 
-    &_lemon {
-      padding: 2px 5px;
-      border-radius: 24px;
+    &_vita {
       background-color: #f4ff7a;
     }
 
-    &_orange {
-      padding: 2px 5px;
-      border-radius: 24px;
+    &_promotion {
       background-color: rgb(255, 205, 112);
     }
 
-    &_pink {
-      padding: 2px 5px;
-      border-radius: 24px;
+    &_happybeen {
       background-color: #ffc2fd;
     }
 
-    &_lavender {
-      padding: 2px 5px;
-      border-radius: 24px;
+    &_mail {
       background-color: #daa6ff;
     }
 
-    &_gray {
-      padding: 2px 5px;
-      border-radius: 24px;
+    &_ {
       background-color: #bbbbbb;
     }
 
     &_red {
-      padding: 2px 5px;
-      border-radius: 24px;
       background-color: #ff6a6a;
     }
-    &_navy {
-      padding: 2px 5px;
-      border-radius: 24px;
+    &_sme {
       background-color: #7da6ff;
     }
 
-    &_green {
-      padding: 2px 5px;
-      border-radius: 24px;
-      background-color: #c3e7ce;
+    &_campaign {
+      background-color: #96dff9;
     }
 
-    &_olive {
-      padding: 2px 5px;
-      border-radius: 24px;
-      background-color: rgb(173, 173, 102);
+    &_search {
+      background-color: rgb(146, 228, 113);
     }
   }
 }
@@ -519,13 +497,10 @@
 
   .stack__title {
       width: 100%;
-      font-size: 4vw;
+      font-size: 40px;
       font-weight: 900;
-      line-height: 1.6;
-      font-family: var(--mainKor-font);
+      line-height: 1.2;
       text-transform: uppercase;
-      color: var(--black100);
-      border-bottom: 0.4vw solid var(--black100);
       margin-bottom: 16px;
       text-indent: -0.26vw;
 
@@ -542,7 +517,6 @@
 
       .stack__item {
           width: 500px;
-          background-color: var(--subBg100);
           padding: 2.5rem;
           box-sizing: border-box;
           & + .stack__item {
@@ -659,7 +633,7 @@
   .card_item {
     display: inline-block;
     width: 100%;
-    height: 300px;
+    height: 400px;
     vertical-align: top;
     -webkit-border-radius: 5px;
     border-radius: 5px;
@@ -680,9 +654,11 @@
 
 .front_card {
   padding: 20px 30px;
-  height: 150px;
-  background-color: #fafafa;
+  height: 400px;
+  background-color: #7da6ff;
   box-sizing: border-box;
+  font-weight: bold;
+  color: #fff;
 }
 
 @media (max-width: 1024px) {
