--- a/src/asset/styles/import/common.scss
+++ b/src/asset/styles/import/common.scss
@@ -1,3 +1,7 @@
+//color
+$mainNavy: #1d2430;
+
+
 //header 
 .header {
   .inner {
@@ -7,7 +11,7 @@
 // common
 
 
-
+// section_spot
 .section_spot {
 
   .inner {
@@ -15,8 +19,8 @@
     padding: 0 25px;
     height: 100vh;
     height: calc(var(--vh, 1vh) * 100);
-    background-color: #000;
-    
+    background: linear-gradient(0deg, #e9ffdd  10%, #8eb3f2 100%);
+    // background-color: #000;
   }
 
   .spot_text {
@@ -26,7 +30,8 @@
     transform: translateY(-50%);
     font-size: 80px;
     letter-spacing: 3px;
-    color: #fff;
+    // color: #fff;
+    color: #1d2430;
   }
 }
 
@@ -38,16 +43,13 @@
 [class^="section_0"] {
 
   .inner {
-    height: calc(var(--vh, 1vh) * 100);
     @include box-sizing;
   }
 }
 
-
 .section{
 
   &_00 {
-
     .inner {
       padding: 150px 40px;
     }
@@ -61,13 +63,189 @@
     .des_text {
       margin-top: 50px;
       font-size: 20px;
+      line-height: 1.6;
+    }
+  }
+
+  &_01 {
+    overflow: hidden;
+    .inner {
+      padding: 150px 40px;
     }
   }
 }
 
 
 
-/* select_project */
+
+// 기술스택
+.stack {
+  &_title {
+    width: 100%;
+    font-size: 40px;
+    font-weight: 900;
+    line-height: 1.2;
+
+    em {
+        font-size: 1.25rem;
+        font-weight: 400;
+        line-height: 2;
+    }
+  }
+  &_wrap {
+      display: flex;
+      flex-wrap: wrap;
+      width: 4000px;
+      margin-top: 50px;
+
+      .stack_item {
+          width: 500px;
+          box-sizing: border-box;
+
+          & + .stack_item {
+            margin-left: 20px;
+          }
+          img {
+            width: 100%;
+          }
+
+          .num {
+              font-size: 2rem;
+              font-family: var(--mainNum-font);
+          }
+      }
+  }
+}
+
+
+.stack_item {
+  overflow: hidden;
+  position: relative;
+  width: 100%;
+  height: 300px;
+  -webkit-border-radius: 10px;
+  border-radius: 10px;
+  -webkit-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
+
+  &:hover {
+    -webkit-box-shadow: rgba(0, 0, 33, 0.07) 0 16px 22.4px 4.8px, rgba(0, 0, 33, 0.05) 0 3.2px 16px 0, rgba(0, 0, 33, 0.07) 0 0 1px 0;
+    box-shadow: rgba(0, 0, 33, 0.07) 0 16px 22.4px 4.8px, rgba(0, 0, 33, 0.05) 0 3.2px 16px 0, rgba(0, 0, 33, 0.07) 0 0 1px 0;
+    -webkit-transform: translate3D(0, -3%, 0);
+    transform: translate3D(0, -3%, 0);
+  }
+  @media (max-width: 1024px) {
+    .stack_item {
+      display: inline-block;
+      width: 100%;
+      height: 400px;
+      vertical-align: top;
+      -webkit-border-radius: 5px;
+      border-radius: 5px;
+
+      &:hover {
+        transform: none;
+      }
+    }
+  }
+  
+  &.flipped .back_card {
+    opacity: 1;
+    visibility: visible;
+  }
+}
+
+
+
+
+.front_card {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 40px 30px;
+  height: 100%;
+  background-image: linear-gradient(to top, #6a85b6 0%, #bac8e0 100%);
+  box-sizing: border-box;
+  font-weight: bold;
+  color: #fff;
+}
+
+@media (max-width: 1024px) {
+  .front_card {
+    height: 100%;
+    padding: 10px 20px;
+    white-space: normal;
+  }
+}
+
+.back_card {
+  visibility: hidden;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  // background-image: linear-gradient(to top, #fff 0%, #bac8e0 100%);
+  background-color: #171c2b;
+  border: 1px solid #eef4ff;
+  border-radius: 10px;
+  padding: 40px 30px;
+  box-sizing: border-box;
+  opacity: 0;
+  -webkit-transition: all 0.4s;
+  transition: all 0.4s;
+  color: #fff;
+
+  .stack_list {
+    .list_item {
+      position: relative;
+      padding-left: 30px;
+      font-size: 20px;
+      line-height: 1.2;
+      word-break: keep-all;
+
+      &::before {
+        content: "👩🏻‍💻";
+        position: absolute;
+        top: 2px;
+        left: 0;
+        width: 20px;
+        vertical-align: top;
+        line-height: 1.2;
+      }
+
+      & + .list_item {
+        margin-top: 20px;
+      }
+    }
+  }
+}
+
+@media (max-width: 1024px) {
+  .back_card {
+    padding: 10px 20px;
+  }
+}
+
+.back_card_inner {
+  height: 100%;
+  overflow-y: auto;
+  white-space: normal;
+}
+
+.box_title {
+  font-weight: 900;
+  font-size: 20px;
+  line-height: 2;
+}
+
+.box .box_text {
+  font-size: 15px;
+  line-height: 1.2px;
+}
+
+
+/* 경력사항*/
 .carrer_list {
   display: -webkit-box;
   @include flex(flex);
@@ -177,9 +355,6 @@
         -webkit-transform: translate3D(0, -3%, 0);
         transform: translate3D(0, -3%, 0);
       }
-
-
-      
       &.on  {
         border: 1px solid #00542e;
         .back_card {
@@ -342,6 +517,7 @@
   }
 
   .label {
+    display: inline-block;
     padding: 2px 5px;
     border-radius: 25px;
     background-color: #999;
@@ -378,12 +554,15 @@
       background-color: #daa6ff;
     }
 
-    &_ {
+    &_band {
       background-color: #bbbbbb;
     }
 
-    &_red {
+    &_lico {
       background-color: #ff6a6a;
+    }
+    &_sellerCenter {
+      background-color: #8dc642;
     }
     &_sme {
       background-color: #7da6ff;
@@ -415,301 +594,3 @@
   }
 }
 
-
-.work-block {
-  &.logo {
-    width: 25%;
-  }
-
-  &.ui {
-    margin-bottom: 20px;
-  }
-}
-
-.work-container {
-  @include flex(flex);
-  padding-top: 40px;
-  -webkit-flex-wrap: wrap;
-  -ms-flex-wrap: wrap;
-  flex-wrap: wrap;
-}
-
-.img_area {
-  @include flex(flex);
-  width: 100%;
-  height: 33vw;
- 
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -webkit-flex-direction: column;
-  -ms-flex-direction: column;
-  flex-direction: column;
-  -webkit-box-align: start;
-  -webkit-align-items: flex-start;
-  -ms-flex-align: start;
-  align-items: flex-start;
-
-  &.skill_logo {
-    -webkit-box-pack: end;
-    -webkit-justify-content: flex-end;
-    -ms-flex-pack: end;
-    justify-content: flex-end;
-    background-position: 50% 50%;
-    background-size: cover;
-    background-repeat: no-repeat;
-
-    &.logo_01 {
-      background-image: url(../../img/icon_skill_html.png);
-    }
-
-    &.logo_02 {
-      background-image: url(../../img/icon_skill_css3.png);
-    }
-    &.logo_03 {
-      background-image: url(../../img/icon_skill_js.png);
-    }
-  }
-}
-
-.description_text {
-  @include flex(flex);
-  padding-right: 100px;
-  padding-left: 20px;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -webkit-flex-direction: column;
-  -ms-flex-direction: column;
-  flex-direction: column;
-
-  .title_text {
-    font-weight: bold;
-  }
-}
-
-
-#stack {
-  width: 100%;
-  margin-top: 30vh;
-  // overflow: hidden;
-}
-.stack__inner {
-  padding: 16px;
-
-  .stack__title {
-      width: 100%;
-      font-size: 40px;
-      font-weight: 900;
-      line-height: 1.2;
-      text-transform: uppercase;
-      margin-bottom: 16px;
-      text-indent: -0.26vw;
-
-      em {
-          font-size: 1.25rem;
-          font-weight: 400;
-          line-height: 2;
-      }
-  }
-  .stack__wrap {
-      display: flex;
-      flex-wrap: wrap;
-      width: 4500px;
-
-      .stack__item {
-          width: 500px;
-          padding: 2.5rem;
-          box-sizing: border-box;
-          & + .stack__item {
-            margin-left: 20px;
-          }
-          img {
-            width: 100%;
-          }
-
-          &.p1 {
-              background-color: var(--subBg100);
-          }
-          &.p2 {
-              background-color: var(--subBg200);
-          }
-          &.p3 {
-              background-color: var(--subBg300);
-          }
-          &.p4 {
-              background-color: var(--subBg400);
-          }
-          &.p5 {
-              background-color: var(--subBg500);
-          }
-          &.p6 {
-              background-color: var(--subBg100);
-          }
-          &.p7 {
-              background-color: var(--subBg200);
-          }
-          &.p8 {
-              background-color: var(--subBg300);
-          }
-          &.p9 {
-              background-color: var(--subBg400);
-          }
-          &.p10 {
-              background-color: var(--subBg500);
-          }
-          .num {
-              font-size: 2rem;
-              font-family: var(--mainNum-font);
-          }
-          .img {
-              display: block;
-              margin-top: -20px;
-              transition: margin-top 0.3s;
-
-              img {
-                  border-radius: 5px;
-                  filter: saturate(0%);
-                  transition: all 0.3s;
-              }
-              
-              &:hover {
-                  margin-top: 0;
-
-                  img {
-                      filter: saturate(100%);
-                  }
-              }
-          }
-          .title {
-              font-size: 1.5rem;
-              text-align: center;
-              padding: 0.8rem 0;
-              font-weight: 700;
-              color: var(--black100);
-              border-bottom: 2px solid var(--black100);
-              margin-bottom: 1rem;
-          }
-          .desc {
-              font-size: 1rem;
-          }
-          .site {
-              border: 1px solid var(--black100);
-              display: block;
-              text-align: center;
-              padding: 0.625rem 1.5rem;
-              margin-top: 1.5rem;
-              transition: all 0.2s;
-
-              &:hover {
-                  background-color: var(--black100);
-                  color: var(--white);
-              }
-          }
-      }
-  }
-}
-
-
-
-
-.card_item {
-  overflow: hidden;
-  position: relative;
-  margin-top: 24px;
-  width: 100%;
-  -webkit-border-radius: 10px;
-  border-radius: 10px;
-  -webkit-transition: all 0.2s ease-in-out;
-  transition: all 0.2s ease-in-out;
-}
-
-.card_item:hover {
-  -webkit-box-shadow: rgba(0, 0, 33, 0.07) 0 16px 22.4px 4.8px, rgba(0, 0, 33, 0.05) 0 3.2px 16px 0, rgba(0, 0, 33, 0.07) 0 0 1px 0;
-  box-shadow: rgba(0, 0, 33, 0.07) 0 16px 22.4px 4.8px, rgba(0, 0, 33, 0.05) 0 3.2px 16px 0, rgba(0, 0, 33, 0.07) 0 0 1px 0;
-  -webkit-transform: translate3D(0, -3%, 0);
-  transform: translate3D(0, -3%, 0);
-}
-
-@media (max-width: 1024px) {
-  .card_item {
-    display: inline-block;
-    width: 100%;
-    height: 400px;
-    vertical-align: top;
-    -webkit-border-radius: 5px;
-    border-radius: 5px;
-  }
-  .card_item:hover {
-    transform: none;
-  }
-}
-
-.card_item + .card_item {
-  margin-top: 20px;
-}
-
-.card_item.flipped .back_card {
-  opacity: 1;
-  visibility: visible;
-}
-
-.front_card {
-  padding: 20px 30px;
-  height: 400px;
-  background-color: #7da6ff;
-  box-sizing: border-box;
-  font-weight: bold;
-  color: #fff;
-}
-
-@media (max-width: 1024px) {
-  .front_card {
-    height: 100%;
-    padding: 10px 20px;
-    white-space: normal;
-  }
-}
-
-.back_card {
-  visibility: hidden;
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: #00542e;
-  padding: 20px 30px;
-  opacity: 0;
-  -webkit-transition: all 0.4s;
-  transition: all 0.4s;
-}
-
-@media (max-width: 1024px) {
-  .back_card {
-    padding: 10px 20px;
-  }
-}
-
-.back_card_inner {
-  height: 100%;
-  overflow-y: auto;
-  white-space: normal;
-}
-
-.box_title {
-  font-weight: 900;
-  font-size: 20px;
-  line-height: 2;
-}
-
-.box.bg_wh {
-  color: #202020;
-}
-
-.box.bg_bl {
-  color: #fff;
-}
-
-.box .box_text {
-  font-size: 15px;
-  line-height: 1.2px;
-}
