--- a/src/asset/styles/import/common.scss
+++ b/src/asset/styles/import/common.scss
@@ -54,12 +54,6 @@ $mainNavy: #1d2430;
       padding: 150px 40px;
     }
 
-    .section_title {
-      font-weight: 900;
-      font-size: 60px;
-      line-height: 1.2;
-    }
-
     .des_text {
       margin-top: 50px;
       font-size: 20px;
@@ -73,14 +67,16 @@ $mainNavy: #1d2430;
       padding: 150px 40px;
     }
   }
-}
 
-
-
-
-// 기술스택
-.stack {
   &_title {
+    font-weight: 900;
+    font-size: 60px;
+    line-height: 1.2;
+  }
+
+  
+
+  &_sub_title {
     width: 100%;
     font-size: 40px;
     font-weight: 900;
@@ -92,6 +88,13 @@ $mainNavy: #1d2430;
         line-height: 2;
     }
   }
+}
+
+
+
+
+// 기술스택
+.stack {
   &_wrap {
       display: flex;
       flex-wrap: wrap;
@@ -101,6 +104,7 @@ $mainNavy: #1d2430;
       .stack_item {
           width: 500px;
           box-sizing: border-box;
+          cursor: pointer;
 
           & + .stack_item {
             margin-left: 20px;
@@ -246,6 +250,9 @@ $mainNavy: #1d2430;
 
 
 /* 경력사항*/
+.carrer_box{
+  margin-top: 100px;
+}
 .carrer_list {
   display: -webkit-box;
   @include flex(flex);
