--- a/src/asset/styles/portfolio_v4.scss
+++ b/src/asset/styles/portfolio_v4.scss
@@ -1,9 +1,8 @@
 @charset 'UTF-8';
 
-@import './common/base';
-@import './common/mixin';
-@import './common/font';
+@import "./common/base";
+@import "./common/mixin";
+@import "./common/font";
 
-@import './import/layout';
-@import './import/common';
-
+@import "./import/layout";
+@import "./import/common";
