--- a/src/asset/styles/common/base.scss
+++ b/src/asset/styles/common/base.scss
@@ -1,25 +1,25 @@
 body,
 html {
-    width: 100%;
-    height: 100%;
-    -webkit-text-size-adjust: none;
-    -moz-text-size-adjust: none;
-    -ms-text-size-adjust: none;
-    text-size-adjust: none;
-    -webkit-overflow-scrolling: touch;
-    font-family: 'NanumSquareNeo', 'NanumSquare', '나눔스퀘어', AppleSDGothicNeo-Regular,
-        'Helvetica Neue', Helvetica, Arial, sans-serif;
-    font-size: 14px;
-    font-weight: 400;
-    line-height: 1.1;
-    color: #000;
+  width: 100%;
+  height: 100%;
+  -webkit-text-size-adjust: none;
+  -moz-text-size-adjust: none;
+  -ms-text-size-adjust: none;
+  text-size-adjust: none;
+  -webkit-overflow-scrolling: touch;
+  font-family: "NanumSquareNeo", "NanumSquare", "나눔스퀘어",
+    AppleSDGothicNeo-Regular, "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 1.1;
+  color: #000;
 }
 
 @media (min-width: 768px) {
-    body,
-    html {
-        scroll-behavior: smooth;
-    }
+  body,
+  html {
+    scroll-behavior: smooth;
+  }
 }
 
 body,
@@ -46,88 +46,88 @@ td,
 textarea,
 th,
 ul {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
 fieldset {
-    border: 0;
+  border: 0;
 }
 
 img,
 video {
-    border: 0;
-    vertical-align: top;
+  border: 0;
+  vertical-align: top;
 }
 
 ol,
 ul {
-    list-style: none;
+  list-style: none;
 }
 
 li {
-    vertical-align: top;
-    list-style: none;
+  vertical-align: top;
+  list-style: none;
 }
 
 textarea {
-    -webkit-border-radius: 0;
-    border-radius: 0;
-    -webkit-appearance: none;
-    resize: none;
+  -webkit-border-radius: 0;
+  border-radius: 0;
+  -webkit-appearance: none;
+  resize: none;
 }
 
 address,
 em {
-    font-style: normal;
+  font-style: normal;
 }
 
 input,
 select {
-    vertical-align: middle;
+  vertical-align: middle;
 }
 
-input[type='text']::-ms-clear {
-    display: none;
+input[type="text"]::-ms-clear {
+  display: none;
 }
 
 button,
 input {
-    padding: 0;
-    border: none;
-    border: 0;
-    outline: none;
-    outline: 0;
-    background: none;
-    font: inherit;
-    background-color: transparent;
-    -webkit-appearance: none;
-    appearance: none;
-    -webkit-border-radius: 0;
-    border-radius: 0;
-    cursor: pointer;
+  padding: 0;
+  border: none;
+  border: 0;
+  outline: none;
+  outline: 0;
+  background: none;
+  font: inherit;
+  background-color: transparent;
+  -webkit-appearance: none;
+  appearance: none;
+  -webkit-border-radius: 0;
+  border-radius: 0;
+  cursor: pointer;
 }
 
 a {
-    color: inherit;
-    text-decoration: none;
-    cursor: pointer;
+  color: inherit;
+  text-decoration: none;
+  cursor: pointer;
 }
 
 a:active,
 a:focus,
 a:hover {
-    text-decoration: none;
-    outline: none;
+  text-decoration: none;
+  outline: none;
 }
 
 .blind {
-    overflow: hidden;
-    position: absolute;
-    clip: rect(0, 0, 0, 0);
-    width: 1px;
-    height: 1px;
-    margin: -1px;
+  overflow: hidden;
+  position: absolute;
+  clip: rect(0, 0, 0, 0);
+  width: 1px;
+  height: 1px;
+  margin: -1px;
 }
 
 article,
@@ -139,17 +139,16 @@ header,
 hgroup,
 nav,
 section {
-    display: block;
+  display: block;
 }
 
 table {
-    width: 100%;
-    table-layout: fixed;
-    border-spacing: 0;
-    border-collapse: collapse;
+  width: 100%;
+  table-layout: fixed;
+  border-spacing: 0;
+  border-collapse: collapse;
 }
 
 table caption {
-    visibility: hidden;
+  visibility: hidden;
 }
-
